default/main-obr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-obr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-obr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: main-obr
    spec:
      containers:
      - name: p2stable
        image: docker.galasa.dev/galasadev/galasa-maven-obr:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - main-obr
              topologyKey: kubernetes.io/hostname
