default/main-p2.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-p2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-p2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: main-p2
    spec:
      containers:
      - name: p2stable
        image: docker.galasa.dev/galasadev/galasa-p2:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - main-p2
              topologyKey: kubernetes.io/hostname
