default/p2stable.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p2stable
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: p2stable
    spec:
      containers:
      - name: p2stable
        image: icr.io/galasadev/galasa-p2-amd64:0.29.0
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - p2stable
              topologyKey: kubernetes.io/hostname
