default/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resources
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: resources
  template:
    metadata:
      labels:
        app: resources
    spec:
      containers:
      - name: resources
        image: icr.io/galasadev/galasa-resources:0.22.0
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - resources
              topologyKey: kubernetes.io/hostname
