default/restapidoc-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapidoc-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapidoc-stable
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: restapidoc-stable
    spec:
      containers:
      - name: restapidoc-stable
        image: icr.io/galasadev/galasa-restapidoc-amd64:0.28.0
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - restapidoc-stable
              topologyKey: kubernetes.io/hostname
