default/javadoc-stable-service.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Service
metadata:
  name: javadoc-stable
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: javadoc-stable
