default/main-p2-service.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Service
metadata:
  name: main-p2
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: main-p2
