default/p2stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2stable
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: p2stable
