default/resources-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: resources
