default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress-resource
spec:
  tls:
  - hosts:
    - p2.galasa.dev
    - p2snapshot.galasa.dev
    - jenkins.galasa.dev
    - sonarqube.galasa.dev
    - resources.galasa.dev
    - javadoc.galasa.dev
    - javadoc-snapshot.galasa.dev
    - nexus.galasa.dev
    - docker.galasa.dev
    - development.galasa.dev
    secretName: galasa-cert7
  rules:
  - host: p2.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: p2stable
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: p2snapshot.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: p2-snapshot
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: jenkins.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  - host: sonarqube.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: sonarqube
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
  - host: javadoc.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: javadoc-stable
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: javadoc-snapshot.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: javadoc-snapshot
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: resources.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: resources
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: nexus.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
  - host: docker.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: nexus
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
  - host: development.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: githubappcopyright
            port:
              number: 3000
        path: /githubapp/copyright/event_handler
        pathType: ImplementationSpecific
      - backend:
          service:
            name: main-obr
            port:
              number: 80
        path: /galasadev/main/maven/obr/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: main-p2
            port:
              number: 80
        path: /galasadev/main/p2/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: main-isolated
            port:
              number: 80
        path: /galasadev/main/maven/isolated/
        pathType: ImplementationSpecific
